--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "devDependencies": {
     "@types/jest": "^29.5.3",
@@ -6,6 +7,8 @@
     "typescript": "^5.1.6"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "watch": "tsc --watch",
+    "build": "tsc"
   }
 }
